syntax="proto3";

option go_package="./protos/ordersProto";


service OrderService{
    rpc CreateAllOrders(stream OrderRequest) returns (stream OrderResponse){}
}

message OrderRequest {
    string product_name =1 ;
    int32 quantity = 2;
}

message OrderResponse {
    string  product_name = 1;
    int32  quantity = 2 ;
    float price = 3 ;
    float total_amount = 5;
}
